--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,49 @@
+
+.jumbotron {
+  margin: 0px auto;
+  padding: 50px 30px;
+  background: #5b4152;
+  color: floralwhite;
+  font-size: 30px; 
+  text-align: center;}
+
 .summary {
     color: black;
     margin: 0 100px 0 100px;
-    font-size: 1.5em;
+    font-size: 20px;
   }
 
+.skills {
+    color: black;
+    margin: 0 100px 0 100px;
+    font-size: 20px;
+  }
+
+.coursera {
+    color: black;
+    margin: 0 100px 0 100px;
+    font-size: 20px;
+  }
 footer {
     display: block;
-    background-color: peachpuff;
-    position: fixed;
+    background-color: #5b4152;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100px;
+    height: 220px;
     width: 100%;
     border-top: 1px solid white;
   }
   
   .contacts {
-    color: black;
-    font-size: 14px;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .copyright {
+    color: white;
+    font-size: 18px;
     text-align: center;
   }
 
